# discord-clone

./: README.md  docker-compose.dev.yaml  docker-compose.test.yaml  docker-compose.yaml
alembic/: env.py
backend/: .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 1ecab0804c22_added_dm_id_column_to_friends_table.py  3c7eeaa0751d_added_models.py  3db608281b6d_added_dm_id_column_to_friends_table.py  ba16aa3944f1_added_unique_constraints.py  c209f8f4277c_changed_created_date_to_date.py
backend/app/: .env.test  app.py  base.py  base_models.py  base_schemas.py  base_service.py  config.py  database.py  database_transaction.py  exception_handlers.py  exceptions.py  file_upload.py  firebase_startup.py  main.py  redis_client.py  utils.py
backend/app/ConnectionManagers/: CentralWebsocketServerInterface.py  RedisPubSubManager.py  ServerConnectionManager.py  SocketClient.py
backend/app/WebsocketManagers/: CentralWebsocketServerInterface.py  RedisPubSubManager.py  ServerConnectionManager.py
backend/app/auth/: exceptions.py  schemas.py  service.py
backend/app/core/: config.py  oauth.py  utils.py
backend/app/crud/: dms.py  friend_requests.py  friends.py  notifications.py  server_websocket.py  servers.py  user.py
backend/app/db/: base.py  base_class.py  database.py
backend/app/dm/: endpoints.py  models.py  schemas.py  service.py
backend/tests/: conftest.py  programming.jfif  test_dms.py  test_friend_requests.py  test_friends.py  test_notifications.py  test_servers.py  test_user.py  utils.py
(+182 files in other folders)
