[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["bendeez <daniellacina8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "1.13.1"
asyncpg = "0.29.0"
bcrypt = "4.0.1"
fastapi = "0.110.0"
firebase-rest-api = "1.11.0"
httpx = "0.27.0"
passlib = "1.7.4"
pydantic = "2.6.4"
pydantic-settings = "2.2.1"
pytest = "8.2.2"
python-dotenv = "1.0.0"
python-jose = "3.3.0"
python-multipart = "0.0.6"
sqlalchemy = "2.0.25"
uvicorn = "0.29.0"
websockets = "10.4"
redis = "^5.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
